About me section done

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -3,4 +3,31 @@ ru:
     index:
       about: Обо мне
       about_content:
-        hello: Привет!
+        hello: 'Привет. Меня зовут Андрей Гладилин. Это мой персональный сайт.'
+        me: 'Мне 23 года. Я закончил ПензГТУ по специальности "Информационные технологии в дизайне", после чего поступил в аспирантуру. Мой тип по соционике - ИЛИ "Бальзак" (без сомнений), по психософии - ЛФВЭ (наиболее вероятно). По характеру меланхолик.'
+        nicknames: 'Я использую два псевдонима: "Лайан де Ридлинг" - для литературного творчества, "Derr Şaff" - моё имя на сахе, для всех остальных случаев. '
+        interests: 'Занимаюсь наукой, IT-разработками, также пробую себя в качестве писателя. Мои интересы перечислены ниже.'
+        interests_list:
+          it: Информационные технологии
+          sciences: Наука
+          foreign_languages: Иностранные языки
+          literature: Литература
+          yoga: Йога
+          sports: Спорт
+          games: Компьютерные игры
+          socionics: Соционика
+          history: История
+          ai: Искусственный интеллект
+          music: Инструментальная музыка
+          engineering: Электротехника
+          comics: Комиксы
+      skills: Навыки
+      skills_content:
+        desc: 'У меня был небольшой опыт разработки веб-приложений на Ruby on Rails, в данный момент я изучаю фронтенд-технологии.'
+      science: Научные работы
+      science_content:
+        desc: 'Я учусь в аспирантуре на втором курсе. Моя диссертация посвящена разработке семантической кластеризации больших данных (Big Data).'
+      projects: Мои разработки
+      works: Литературное творчество
+      photos: Мои фото
+      contacts: Контакты
