Add Science and Skills page

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -23,10 +23,13 @@ ru:
           comics: Комиксы
       skills: Навыки
       skills_content:
-        desc: 'У меня был небольшой опыт разработки веб-приложений на Ruby on Rails, в данный момент я изучаю фронтенд-технологии.'
+        level: 'По уровню я начинающий разработчик, который в большей степени нацелен на создание собственного продукта, нежели на повышение квалификации. Для меня в разработке очень важен элемент свободы творчества и акцент на глобальное восприятие проекта, а не детали реализации. Ниже я перечислил стек технологий, с которыми заинтересован работать, и примерный уровень владения ими.'
+        interskillar: 'Более детальное дерево моих навыков можно посмотреть на моём проекте Interskillar: '
       science: Научные работы
       science_content:
-        desc: 'Я учусь в аспирантуре на втором курсе. Моя диссертация посвящена разработке семантической кластеризации больших данных (Big Data).'
+        theme: 'Я учусь в аспирантуре на втором курсе. Моя диссертация посвящена разработке семантической кластеризации больших данных (Big Data). Над этой идеей я начал работать совсем недавно, поэтому мой прогресс в написании диссертации пока что невелик.'
+        thesis: 'Моя диссертация находится в открытом доступе, для её создания я использую git-репозиторий: '
+        articles: 'Кроме того, я также создал репозиторий со всеми моими статьями: '
       projects: Мои разработки
       works: Литературное творчество
       photos: Мои фото
