Add simple projects page

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -31,6 +31,11 @@ ru:
         thesis: 'Моя диссертация находится в открытом доступе, для её создания я использую git-репозиторий: '
         articles: 'Кроме того, я также создал репозиторий со всеми моими статьями: '
       projects: Мои разработки
+      projects_content:
+        ord_desc: 'Семантическая база знаний.'
+        is_desc: 'Проект позволяет детализированно описывать навыки и умения, что может быть использовано в качестве трекера саморазвития, так и биржи труда.'
+        bk_desc: 'Приложение для отслеживания цен, составления списка покупок и хранения списка уже имеющихся вещей.'
+        ar_desc: 'Веб-сервис для хранения списка достижений, которые пользователи открывают во время каких-либо мероприятий.'
       works: Литературное творчество
       photos: Мои фото
       contacts: Контакты
