Add works page content

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -37,5 +37,11 @@ ru:
         bk_desc: 'Приложение для отслеживания цен, составления списка покупок и хранения списка уже имеющихся вещей.'
         ar_desc: 'Веб-сервис для хранения списка достижений, которые пользователи открывают во время каких-либо мероприятий.'
       works: Литературное творчество
+      works_content:
+        my_way: 'Я начинающий писатель, работы оформляю в виде серии произведений. На данный момент у меня всего два рассказа, однако когда-нибудь я всё же продолжу активно писать. Мои работы также представлены на следующих сайтах:'
+        collections:
+          petals_of_bitterness: Лепестки горечи
+          coterie_of_drawing: Кружок рисования
+          web_of_strings: Паутина струн
       photos: Мои фото
       contacts: Контакты
