Add tips for planets

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,7 +1,7 @@
 ru:
   application:
     index:
-      about: Обо мне
+      about: 'Обо мне'
       about_content:
         hello: 'Привет. Меня зовут Андрей Гладилин. Это мой персональный сайт.'
         me: 'Мне 23 года. Я закончил ПензГТУ по специальности "Информационные технологии в дизайне", после чего поступил в аспирантуру. Мой тип по соционике - ИЛИ "Бальзак" (без сомнений), по психософии - ЛФВЭ (наиболее вероятно).'
@@ -25,7 +25,7 @@ ru:
       skills_content:
         level: 'По уровню я начинающий разработчик, который в большей степени нацелен на создание собственного продукта, нежели на повышение квалификации. Для меня в разработке очень важен элемент свободы творчества и акцент на глобальное восприятие проекта, а не детали реализации. Ниже я перечислил стек технологий, с которыми заинтересован работать, и примерный уровень владения ими.'
         interskillar: 'Более детальное дерево моих навыков можно посмотреть на моём проекте Interskillar: '
-      science: Научные работы
+      science: 'Научные работы'
       science_content:
         theme: 'Я учусь в аспирантуре на втором курсе. Моя диссертация посвящена разработке семантической кластеризации больших данных (Big Data). Над этой идеей я начал работать совсем недавно, поэтому мой прогресс в написании диссертации пока что невелик.'
         thesis: 'Моя диссертация находится в открытом доступе, для её создания я использую git-репозиторий: '
