--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,7 +1,7 @@
 ru:
   application:
     index:
-      about: 'Обо мне'
+      about: 'Об авторе'
       about_content:
         hello: 'Привет. Меня зовут Андрей Гладилин. Это мой персональный сайт.'
         me: 'Мне 23 года. Я закончил ПензГТУ по специальности "Информационные технологии в дизайне", после чего поступил в аспирантуру. Мой тип по соционике - ИЛИ "Бальзак" (без сомнений), по психософии - ЛФВЭ (наиболее вероятно).'
@@ -25,25 +25,25 @@ ru:
       skills_content:
         level: 'По уровню я начинающий разработчик, который в большей степени нацелен на создание собственного продукта, нежели на повышение квалификации. Для меня в разработке очень важен элемент свободы творчества и акцент на глобальное восприятие проекта, а не детали реализации. Ниже я перечислил стек технологий, с которыми заинтересован работать, и примерный уровень владения ими.'
         interskillar: 'Более детальное дерево моих навыков можно посмотреть на моём проекте Interskillar: '
-      science: 'Научные работы'
+      science: Наука
       science_content:
         theme: 'Я учусь в аспирантуре на втором курсе. Моя диссертация посвящена разработке семантической кластеризации больших данных (Big Data). Над этой идеей я начал работать совсем недавно, поэтому мой прогресс в написании диссертации пока что невелик.'
         thesis: 'Моя диссертация находится в открытом доступе, для её создания я использую git-репозиторий: '
         articles: 'Кроме того, я также создал репозиторий со всеми моими статьями: '
-      projects: Мои разработки
+      projects: Проекты
       projects_content:
         ord_desc: 'Семантическая база знаний.'
         is_desc: 'Проект позволяет детализированно описывать навыки и умения, что может быть использовано в качестве трекера саморазвития, так и биржи труда.'
         bk_desc: 'Приложение для отслеживания цен, составления списка покупок и хранения списка уже имеющихся вещей.'
         ar_desc: 'Веб-сервис для хранения списка достижений, которые пользователи открывают во время каких-либо мероприятий.'
-      works: Литературное творчество
+      works: Литература
       works_content:
         my_way: 'Я начинающий писатель, работы оформляю в виде серии произведений. На данный момент у меня всего два рассказа, однако когда-нибудь я всё же продолжу активно писать. Мои работы также представлены на следующих сайтах:'
         collections:
           petals_of_bitterness: Лепестки горечи
           coterie_of_drawing: Кружок рисования
           web_of_strings: Паутина струн
-      photos: Мои фото
+      photos: Фото
       contacts: Контакты
       contacts_content:
         email: 'Мой электронный адрес: '
