Add better tips for interests

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -8,17 +8,17 @@ ru:
         nicknames: 'Я использую два псевдонима: "Лайан де Ридлинг" - для литературного творчества, "Derr Şaff" - моё имя на сахе, для всех остальных случаев. '
         interests: 'Занимаюсь наукой, IT-разработками, также пробую себя в качестве писателя. Мои интересы перечислены ниже.'
         interests_list:
-          it: Информационные технологии
+          it: IT
           sciences: Наука
-          foreign_languages: Иностранные языки
-          literature: Литература
+          foreign_languages: Языки
+          literature: Чтение
           yoga: Йога
           sports: Спорт
-          games: Компьютерные игры
+          games: Игры
           socionics: Соционика
           history: История
-          ai: Искусственный интеллект
-          music: Инструментальная музыка
+          ai: ИИ
+          music: Музыка
           engineering: Электротехника
           comics: Комиксы
       skills: Навыки
