Add content to science page

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -27,9 +27,11 @@ ru:
         interskillar: 'Более детальное дерево моих навыков можно посмотреть на моём проекте Interskillar: '
       science: Наука
       science_content:
-        theme: 'Я учусь в аспирантуре на втором курсе. Моя диссертация посвящена разработке семантической кластеризации больших данных (Big Data). Над этой идеей я начал работать совсем недавно, поэтому мой прогресс в написании диссертации пока что невелик.'
-        thesis: 'Моя диссертация находится в открытом доступе, для её создания я использую git-репозиторий: '
+        theme: 'Я учусь в аспирантуре на втором курсе. С диссертацией у меня дела не очень, так что выставить что-то на общественный суд пока не могу.'
+        thesis: 'Моя диссертация находится в открытом доступе, для её написания я использую git-репозиторий: '
         articles: 'Кроме того, я также создал репозиторий со всеми моими статьями: '
+        achievements_desc: 'За время обучения в вузе я накопил достаточно большое количество различных дипломов и грамот. Посмотреть их можно на следующей странице: '
+        achievements_title: Достижения
       projects: Проекты
       projects_content:
         ord_desc: 'Семантическая база знаний.'
