Add basic skills page

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -11,7 +11,6 @@ ru:
           it: IT
           sciences: Наука
           foreign_languages: Языки
-          literature: Чтение
           yoga: Йога
           sports: Спорт
           games: Игры
@@ -38,8 +37,8 @@ ru:
         is_desc: 'Проект позволяет детализированно описывать навыки и умения, что может быть использовано в качестве трекера саморазвития, так и биржи труда.'
         bk_desc: 'Приложение для отслеживания цен, составления списка покупок и хранения списка уже имеющихся вещей.'
         ar_desc: 'Веб-сервис для хранения списка достижений, которые пользователи открывают во время каких-либо мероприятий.'
-      works: Литература
-      works_content:
+      literature: Литература
+      literature_content:
         my_way: 'Я начинающий писатель, работы оформляю в виде серии произведений. На данный момент у меня всего два рассказа, однако когда-нибудь я всё же продолжу активно писать. Мои работы также представлены на следующих сайтах:'
         collections:
           petals_of_bitterness: Лепестки горечи
