Improvements of te science page

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -26,8 +26,10 @@ ru:
         interskillar: 'Более детальное дерево моих навыков можно посмотреть на моём проекте Interskillar: '
       science: Наука
       science_content:
-        theme: 'Я учусь в аспирантуре на втором курсе. С диссертацией у меня дела не очень, так что выставить что-то на общественный суд пока не могу.'
-        thesis: 'Моя диссертация находится в открытом доступе, для её написания я использую git-репозиторий: '
+        intro: 'Я учусь в аспирантуре на втором курсе. К сожалению, до сих пор испытываю сложности с написанием диссертации из-за неопределённости темы и проблемы и нехватки знаний по математике.'
+        theme: 'Моя работа посвящена разработке семантического кластерного анализа. Его особенность заключается в том, что данные перед кластеризацией обрабатываются на наличие каких-либо взаимных связей, которые могут повлиять на итоговое разбиение. Эти связи хранятся в графовой базе данных.'
+        repository: репозитории
+        thesis: "Текущий прогресс по диссертации можно посмотреть в %{link}."
         articles: 'Кроме того, я также создал репозиторий со всеми моими статьями: '
         achievements_desc: 'За время обучения в вузе я накопил достаточно большое количество различных дипломов и грамот. Посмотреть их можно на следующей странице: '
         achievements_title: Достижения
