Fixing about page

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -4,7 +4,7 @@ ru:
       about: 'Об авторе'
       about_content:
         hello: 'Привет. Меня зовут Андрей Гладилин. Это мой персональный сайт.'
-        me: 'Мне 23 года. Я закончил ПензГТУ по специальности "Информационные технологии в дизайне", после чего поступил в аспирантуру. Мой тип по соционике - ИЛИ "Бальзак" (без сомнений), по психософии - ЛФВЭ (наиболее вероятно).'
+        me: 'Мне 24 года. Я закончил ПензГТУ по специальности "Информационные технологии в дизайне", после чего поступил в аспирантуру.'
         nicknames: 'Я использую два псевдонима: "Лайан де Ридлинг" - для литературного творчества, "Derr Şaff" - моё имя на сахе, для всех остальных случаев. '
         interests: 'Занимаюсь наукой, IT-разработками, также пробую себя в качестве писателя. Мои интересы перечислены ниже.'
         interests_list:
