Fixing about page, replace inline icons

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -6,7 +6,7 @@ ru:
         hello: 'Привет. Меня зовут Андрей Гладилин. Это мой персональный сайт.'
         me: 'Мне 24 года. Я закончил ПензГТУ по специальности "Информационные технологии в дизайне", после чего поступил в аспирантуру.'
         nicknames: 'Я использую два псевдонима: "Лайан де Ридлинг" - для литературного творчества, "Derr Şaff" - моё имя на сахе, для всех остальных случаев. '
-        interests: 'Занимаюсь наукой, IT-разработками, также пробую себя в качестве писателя. Мои интересы перечислены ниже.'
+        interests: 'Занимаюсь наукой, IT-разработками, также пробую себя в качестве писателя. Мои интересы:'
         interests_list:
           it: IT
           sciences: Наука
@@ -41,7 +41,7 @@ ru:
         ar_desc: 'Веб-сервис для хранения списка достижений, которые пользователи открывают во время каких-либо мероприятий.'
       literature: Литература
       literature_content:
-        my_way: 'Я начинающий писатель, работы оформляю в виде серии произведений. На данный момент у меня всего два рассказа, однако когда-нибудь я всё же продолжу активно писать. Мои работы также представлены на следующих сайтах:'
+        my_way: 'Я начинающий писатель, работы планирую оформлять в виде серии произведений. На данный момент у меня всего два рассказа, однако когда-нибудь я всё же продолжу активно писать. Мои работы также представлены на следующих сайтах:'
         collections:
           petals_of_bitterness: Лепестки горечи
           coterie_of_drawing: Кружок рисования
