Add Sass skill + minor changes

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -12,6 +12,7 @@ ru:
           sciences: Наука
           foreign_languages: Языки
           yoga: Йога
+          literature: Литература
           sports: Спорт
           games: Игры
           socionics: Соционика
@@ -22,8 +23,9 @@ ru:
           comics: Комиксы
       skills: Навыки
       skills_content:
-        level: 'По уровню я начинающий разработчик, который в большей степени нацелен на создание собственного продукта, нежели на повышение квалификации. Для меня в разработке очень важен элемент свободы творчества и акцент на глобальное восприятие проекта, а не детали реализации. Ниже я перечислил стек технологий, с которыми заинтересован работать, и примерный уровень владения ими.'
+        level: 'Как разработчик, я не углублялся в какой-либо области и имею отрывочные знания из разных сфер. Мне интересен весь стек разработки, поэтому я склонен развиваться как универсальный специалист. Ниже примерный список моих умений.'
         interskillar: 'Более детальное дерево моих навыков можно посмотреть на моём проекте Interskillar: '
+        education: 'Кроме того, я периодически прохожу различные интерактивные и не очень курсы, решаю задачи на кодерских сайтах, вот ссылки на профили:'
       science: Наука
       science_content:
         intro: 'Я учусь в аспирантуре на втором курсе. К сожалению, до сих пор испытываю сложности с написанием диссертации из-за неопределённости постановки задачи и нехватки знаний по математике.'
@@ -41,7 +43,7 @@ ru:
         ar_desc: 'Веб-сервис для хранения списка достижений, которые пользователи открывают во время каких-либо мероприятий.'
       literature: Литература
       literature_content:
-        my_way: 'Я начинающий писатель, работы планирую оформлять в виде серии произведений. На данный момент у меня всего два рассказа, однако когда-нибудь я всё же продолжу активно писать. Мои работы также представлены на следующих сайтах:'
+        my_way: 'Я начинающий писатель, работы планирую оформлять в виде серии произведений. На данный момент у меня всего два рассказа, однако когда-нибудь я всё же продолжу активно писать. Мои работы представлены на следующих сайтах:'
         collections:
           petals_of_bitterness: Лепестки горечи
           coterie_of_drawing: Кружок рисования
