[30] Start translating into English

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,56 @@
 en:
   application:
     index:
-      about: About me
+      about: 'About the author'
       about_content:
-        hello: Hello!
+        hello: 'Hello. My name is Andrew Gladilin. This is my personal web-site.'
+        me: 'Мне 24 года. Я закончил ПензГТУ по специальности "Информационные технологии в дизайне", после чего поступил в аспирантуру.'
+        nicknames: 'Я использую два псевдонима: "Лайан де Ридлинг" - для литературного творчества, "Derr Şaff" - моё имя на сахе, для всех остальных случаев. '
+        interests: 'Занимаюсь наукой, IT-разработками, также пробую себя в качестве писателя. Мои интересы:'
+        interests_list:
+          it: IT
+          sciences: Наука
+          foreign_languages: Языки
+          yoga: Йога
+          literature: Литература
+          sports: Спорт
+          games: Игры
+          socionics: Соционика
+          history: История
+          ai: ИИ
+          music: Музыка
+          engineering: Электротехника
+          comics: Комиксы
+      skills: Навыки
+      skills_content:
+        level: 'Как разработчик, я не углублялся в какой-либо области и имею отрывочные знания из разных сфер. Мне интересен весь стек разработки, поэтому я склонен развиваться как универсальный специалист. Ниже примерный список моих умений.'
+        interskillar: 'Более детальное дерево моих навыков можно посмотреть на моём проекте Interskillar: '
+        education: 'Кроме того, я периодически прохожу различные интерактивные и не очень курсы, решаю задачи на кодерских сайтах, вот ссылки на профили:'
+      science: Наука
+      science_content:
+        intro: 'Я учусь в аспирантуре на втором курсе. К сожалению, до сих пор испытываю сложности с написанием диссертации из-за неопределённости постановки задачи и нехватки знаний по математике.'
+        theme: 'Моя работа посвящена разработке семантического кластерного анализа. Его особенность заключается в том, что данные перед кластеризацией обрабатываются на наличие каких-либо взаимных связей, которые могут повлиять на итоговое разбиение по кластерам. Эти связи хранятся в графовой базе данных.'
+        repository: репозитории
+        thesis: "Текущий прогресс по диссертации можно посмотреть в %{link}."
+        articles: 'Кроме того, я также создал репозиторий со всеми моими статьями: '
+        achievements_desc: 'За время обучения в вузе я накопил достаточно большое количество различных дипломов и грамот. Посмотреть их можно на следующей странице: '
+        achievements_title: Достижения
+      projects: Проекты
+      projects_content:
+        ideas: 'У меня много идей, которые я хотел бы реализовать, но у меня не хватает знаний, умений и времени. Проекты будут появляться здесь, как только достигнут планки MVP.'
+        saffa_desc: 'Этот сайт. Резюме, блог с переводами статей, обзоры книг, игр и прочего.'
+        ord_desc: 'Семантическая база знаний.'
+        is_desc: 'Проект позволяет детализированно описывать навыки и умения, что может быть использовано в качестве трекера саморазвития, так и биржи труда.'
+        bk_desc: 'Приложение для отслеживания цен, составления списка покупок и хранения списка уже имеющихся вещей.'
+        ar_desc: 'Веб-сервис для хранения списка достижений, которые пользователи открывают во время каких-либо мероприятий.'
+      literature: Литература
+      literature_content:
+        my_way: 'Я начинающий писатель, работы планирую оформлять в виде серии произведений. На данный момент у меня всего два рассказа, однако когда-нибудь я всё же продолжу активно писать. Мои работы представлены на следующих сайтах:'
+        collections:
+          petals_of_bitterness: Лепестки горечи
+          coterie_of_drawing: Кружок рисования
+          web_of_strings: Паутина струн
+      photos: Фото
+      contacts: Контакты
+      contacts_content:
+        email: 'Мой электронный адрес: '
