--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -38,7 +38,7 @@ ru:
       projects: Проекты
       projects_content:
         ideas: 'У меня много идей, которые я хотел бы реализовать, но у меня не хватает знаний, умений и времени. Проекты будут появляться здесь, как только достигнут планки MVP.'
-        saffa_desc: 'Этот сайт.'
+        saffa_desc: 'Этот сайт. Резюме, блог с переводами статей, обзоры книг, игр и прочего.'
         ord_desc: 'Семантическая база знаний.'
         is_desc: 'Проект позволяет детализированно описывать навыки и умения, что может быть использовано в качестве трекера саморазвития, так и биржи труда.'
         bk_desc: 'Приложение для отслеживания цен, составления списка покупок и хранения списка уже имеющихся вещей.'
