[30] Fix yaml problem

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,7 +22,7 @@ en:
           comics: Comics
       skills: Skills
       skills_content:
-        level: 'As a developer, I didn't advanced in any sphere, so I have fragmented knowledge from different areas. I am interested in the full stack of developing, that's why I tend to evolve as a universal specialist.'
+        level: "As a developer, I didn't advanced in any sphere, so I have fragmented knowledge from different areas. I am interested in the full stack of developing, that's why I tend to evolve as a universal specialist."
         interskillar: 'You can see a detailed tree of my skills on my Interskillar project: '
         education: 'Besides, I periodically go through a variety of interactive courses, solve tasks on programming web-sites, here are links to profiles:'
       science: Science
