Minor changes in locales and views

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,3 +53,7 @@ en:
       contacts: Contacts
       contacts_content:
         email: 'My email: '
+  posts:
+    index:
+      read_button: Read
+      comment_link: Comment
