--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -25,7 +25,14 @@ ru:
       skills_content:
         level: 'Как разработчик, я не углублялся в какой-либо области и имею отрывочные знания из разных сфер. Мне интересен весь стек разработки, поэтому я склонен развиваться как универсальный специалист. Ниже примерный список моих умений.'
         interskillar: 'Более детальное дерево моих навыков можно посмотреть на моём проекте Interskillar: '
-        education: 'Кроме того, я периодически прохожу различные интерактивные и не очень курсы, решаю задачи на кодерских сайтах, вот ссылки на профили:'
+        education: 'Кроме того, я периодически прохожу различные интерактивные и не очень курсы, решаю задачи на айтишных сайтах, вот ссылки на профили:'
+        programming_languages: Programming Languages
+        backend: Backend
+        frontend: Frontend
+        vcs: VCS
+        databases: Базы данных
+        mobile: Mobile
+        plan_to_learn: Планирую изучить
       science: Наука
       science_content:
         intro: 'Я учусь в аспирантуре на втором курсе. К сожалению, до сих пор испытываю сложности с написанием диссертации из-за неопределённости постановки задачи и нехватки знаний по математике.'
