[46] Adding response function to comments

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -68,3 +68,4 @@ en:
       send: Send
       write_comment: 'Write a comment'
       no_comments: 'No comments yet.'
+      comment_response: 'Responce to '
