--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,6 @@
 en:
+  under_construction: 'The site is still under construction. Some features can malfunction'
+  report: 'Report a bug'
   application:
     index:
       about: 'About the author'
