[61] Some html/css refactoring

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,8 @@
 en:
+  settings: Settings
+  sign_up: 'Sign up'
+  sign_in: 'Sign in'
+  sign_out: 'Sign out'
   under_construction: 'The site is still under construction. Some features can malfunction'
   report: 'Report a bug'
   languages: Languages
