--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,4 +1,4 @@
 ru:
-  hello: 'Привет. Меня зовут Андрей. Это моя личная веб-страница.'
+  hello: 'Привет. Меня зовут Андрей. Это моя личная веб-страница'
   click: 'Кликайте по фигурам, чтобы узнать обо мне больше.'
   wat: '<a href=""%{}">Что это за символы?</a>'
