--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -2,3 +2,4 @@ ru:
   hello: 'Привет. Меня зовут Андрей. Это моя личная веб-страница'
   click: 'Кликайте по фигурам, чтобы узнать обо мне больше.'
   wat: '<a href=""%{}">Что это за символы?</a>'
+  links: Коллекция полезных ссылок
