--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,5 +1,5 @@
 ru:
-  hello: 'Привет. Меня зовут Андрей. Это моя личная веб-страница'
-  click: 'Кликайте по фигурам, чтобы узнать обо мне больше.'
+  hello: 'Привет. Я Андрей'
+  click: 'Листайте вниз, чтобы узнать обо мне больше'
   wat: '<a href=""%{}">Что это за символы?</a>'
-  links: Коллекция полезных ссылок
+  links: ' - Коллекция полезных ссылок'
