[76] Make one-screen application

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,10 +1,9 @@
 en:
-  hello: 'Hi! I\'m Andrew'
-  about_me: 'About me'
-  skills: Skills
-  projects: Projects
-  links: Links
-  contacts: Contacts
-  click: 'Click on the figures to learn about me'
-  wat: '<a href=""%{}">What are these symbols?</a>'
-  # links: ' - Коллекция полезных ссылок'
+  application:
+    index:
+      hello: Hi!
+      about_me: 'About me'
+      skills: Skills
+      projects: Projects
+      links: Links
+      contacts: Contacts
