--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -7,6 +7,13 @@ ru:
       full_stack: 'Я full-stack разработчик'
       # about me page
       about_me: 'Обо мне'
+      me: 'Мне 24 года. Я получил образование в ПензГТУ по специальности "Информационные технологии в дизайне", после чего поступил в аспирантуру.'
+      interests: 'Мои основные интересы - IT (весь стек разработки) и литература.'
+      experience_ror: 'Какое-то время я работал back-end разработчиком на Ruby on Rails, однако в итоге решил, что мне не стоит этим заниматься.'
+      experience_front: 'Меня очень увлекает мир фронтенда, особенно работа над визуальной частью, но пока что не слишком хорошо умею реализовать задуманное.'
+      future: 'Я до сих пор ищу свою область в IT, поэтому в будущем хотел бы попробовать свои силы в мобильной разработке.'
+      for_now: 'На данный момент я работаю над диссертацией и параллельно ищу достойно оплачиваемую работу.'
+      # skill section
       skills: Навыки
       projects: Проекты
       links: Ссылки
